Se configura el proyecto

--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<div class="container">
+    <br><br>
+    <mat-card class="primary-card">
+        <img mat-card-md-image src="../assets/images/multa.png" width="250" alt="multa">
+        <div>
+            <h2>Gestion de Comparendos</h2>
+            <p>Desde este sistema el funcionario de la secretaria de transtio podra:</p>
+        
+            <br>
+            <ul>
+               <li>Registrar Comparendos</li>
+               <li>Registrar Asistencia A Curso</li>
+               <li>Registrar Pago de Comparendos</li>
+               <li>Consultar Comparendos Por Infractor</li>
+            </ul>
+        </div>
+    </mat-card>
+</div>
