--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,21 @@
     flex-flow: column;
   }
 
+.container {
+    display: flex;
+    min-height: 100vh;
+}
+
+.sidenav {
+    flex: 0 0 200px;
+    background-color: blue;
+}
+
+.content {
+    background-color: red;
+    flex: 1;
+}
+
+app-toolbar, app-navbar{
+  z-index: 10; 
+}
