Se agregan test unitarios

--- a/src/app/shared/components/dialog/dialog.component.html
+++ b/src/app/shared/components/dialog/dialog.component.html
@@ -3,6 +3,6 @@
 </div>
 <div mat-dialog-actions>
     
-    <button mat-button  color="primary"  [mat-dialog-close]="true">Sí</button>
+    <button mat-button id="botonSi"  color="primary"  [mat-dialog-close]="true">Sí</button>
     <button mat-button (click)="onClickNo()">No</button>
 </div>
