--- a/src/app/feature/comparendo/components/comparendo/comparendo.component.html
+++ b/src/app/feature/comparendo/components/comparendo/comparendo.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <a *ngFor="let item of serviciosComparendoItems" [routerLink]="item.url" routerLinkActive="active">{{item.nombre}}</a>
-
+    <a *ngFor="let item of serviciosComparendoItems"  [attr.id]="'link' + item.nombre"
+    [routerLink]="item.url" routerLinkActive="active">{{item.nombre}}</a>
     <router-outlet></router-outlet>
 </div>
 
