--- a/src/app/feature/comparendo/components/registrar-comparendo/registrar-comparendo.component.html
+++ b/src/app/feature/comparendo/components/registrar-comparendo/registrar-comparendo.component.html
@@ -4,26 +4,26 @@
         <img mat-card-md-image src="../assets/images/policia.png" width="250" alt="registrar comparendo">
         <div style="font-size: 12px">
         
-        <form [formGroup]="reactiveForm">
+        <form [formGroup]="reactiveForm" id="registrarComparendoForm">
             <div>
                 <h2>Registrar Comparendo</h2>
                 <br>
                 <p>
                     <mat-form-field appearance="outline">
                         <mat-label>Numero Comparendo</mat-label>
-                        <input validar matInput placeholder="Placeholder" formControlName="numeroComparendo">
+                        <input id="numeroComparendoInput" validar matInput placeholder="Placeholder" formControlName="numeroComparendo">
                     </mat-form-field>
                 </p>
                 <p>
                 <mat-form-field appearance="outline">
                     <mat-label>Identificacion Infractor</mat-label>
-                    <input validar matInput placeholder="Placeholder" formControlName="identificacionInfractor">
+                    <input id="identificacionInfractorInput" validar matInput placeholder="Placeholder" formControlName="identificacionInfractor">
                 </mat-form-field>
                 </p>
                 <p>
-                    <mat-form-field appearance="outline">
+                    <mat-form-field appearance="outline" id="tipoInfraccionSelect">
                         <mat-label>Infraccion</mat-label>
-                        <mat-select validar formControlName="tipoInfraccion">
+                        <mat-select  validar formControlName="tipoInfraccion">
                             <mat-option value="1">First option</mat-option>
                             <mat-option value="2">Second option</mat-option>
                         </mat-select>
@@ -32,15 +32,13 @@
                 <p>
                     <mat-form-field appearance="outline">
                         <mat-label>Fecha Comparendo</mat-label>
-                        <input validar matInput [max]="maxDate" [matDatepicker]="picker" formControlName="fechaComparendo">
+                        <input id="fechaComparendoInput" validar matInput [max]="maxDate" [matDatepicker]="picker" formControlName="fechaComparendo">
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
-
-                    
+                    </mat-form-field>      
                 </p>
                 <div>
-                    <button mat-raised-button color="primary" (click)="submitForm()">Registrar</button>
+                    <button id="botonRegistrarComparendo"  mat-raised-button color="primary" (click)="submitForm()">Registrar</button>
                 </div>
             </div> 
         </form>
